fix icon alignment

--- a/src/app/manage-business/components/business-details/business-details.component.scss
+++ b/src/app/manage-business/components/business-details/business-details.component.scss
@@ -359,8 +359,8 @@
 
     .location {
         display: flex;
-        align-items: center;
-        line-height: 30px;
+        align-items: start;
+        line-height: 20px;
     }
 }
 
