--- a/src/app/manage-business/components/preview-business/preview-business.component.scss
+++ b/src/app/manage-business/components/preview-business/preview-business.component.scss
@@ -413,7 +413,7 @@ fieldset:disabled .btn {
 
 .location {
   display: flex;
-  align-items: center;
+  align-items: start;
   padding-bottom: 16px;
   cursor: pointer;
 }
